@@ -54,22 +54,19 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 693)
-(Parent-Version lpmud 3-3 692)
+(Project-Version lpmud 3-3 694)
+(Parent-Version lpmud 3-3 693)
 (Version-Log "
-  - (slaballoc.c) Corrected the free-steps statistics.
-  - (backend.c) The data-cleanup didn't pay attention to the backend
-       timing, occasionally causing the driver to clean up thousands
-       of objects in one cycle.
-  - (gcollect.c) The cleanup of the fixed datastructures (wizlist, driver
-       hooks) did not observe the overall cleanup timing - on muds with
-       lots of data in the default wizlist entry this lead to annoying
-       lags.
+  - (backend.c) I reintroduced the numeric limit on the number of objects
+       to data-clean, as even with the random factor it could happen
+       that the driver tries to cleanup hundreds of objects in one cycle.
+       The numeric limit is calculated such that all listed objects can
+       be cleaned in half of the configured cleanup cycle.
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Sun, 27 Mar 2005 01:35:56 -0700")
+(Checkin-Time "Sun, 27 Mar 2005 14:46:34 -0700")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -107,7 +104,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.12 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.86 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.756 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.757 644))
   (HISTORY (lpmud/f/49_HISTORY 1.385.1.22 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.21 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -170,7 +167,7 @@
   (src/array.h (lpmud/f/47_array.h 1.18.1.22 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.47.1.22 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.10 644))
-  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.53 644))
+  (src/backend.c (lpmud/d/6_backend.c 1.68.1.35.1.54 644))
   (src/bitstrings.h (lpmud/i/47_bitstrings 1.3 644))
   (src/bitstrings.c (lpmud/i/48_bitstrings 1.16 644))
   (src/bytecode.h (lpmud/a/b/26_bytecode.h 1.1.1.3 644))
@@ -192,7 +189,7 @@
   (src/files.c (lpmud/i/50_files.c 1.29 644))
   (src/filestat.h (lpmud/f/51_filestat.h 1.7 644))
   (src/gcollect.h (lpmud/f/33_gcollect.h 1.6.1.18 644))
-  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.116.1.12 644))
+  (src/gcollect.c (lpmud/c/30_gcollect.c 1.41.1.116.1.13 644))
   (src/hash.h (lpmud/f/32_hash.h 1.6 644))
   (src/hash.c (lpmud/c/28_hash.c 1.17 644))
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.5 644))
@@ -202,8 +199,8 @@
   (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.94 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.13 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.74.1.8 644))
-  (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.21 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.78 644))
+  (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.22 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.79 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.22 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.90 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
