@@ -207,6 +207,9 @@ mp_int boot_time = 0;
   /* The time() the driver was started.
    */
 
+long time_to_data_cleanup = 0;
+  /* The time delay between two data cleans, derived from time_to_cleanup. */
+
 int exit_code = 0; /* TODO: There are constants for this */
   /* Exit code from the program, can be changed with the shutdown()
    * efun.
@@ -402,6 +405,8 @@ main (int argc, char **argv)
               );
           /* This also assures the existance of the fd for the debug log */
 
+        time_to_data_cleanup = (time_to_cleanup > 0) ? time_to_cleanup
+                                                     : DEFAULT_CLEANUP_TIME;
         reserve_memory();
         mstring_init();
           /* Also initializes the standard strings, which may be required
