@@ -33,6 +33,7 @@ extern object_t dummy_current_object_for_loads;
 extern int slow_shut_down_to_do;
 extern Bool reopen_debug_log;
 extern mp_int boot_time;
+extern long time_to_data_cleanup;
 
 #ifdef DEBUG
 extern Bool check_a_lot_ref_counts_flag;
